Updated ticket link

--- a/support.html
+++ b/support.html
@@ -117,13 +117,13 @@
 <details open="">
   <summary>When will my server be ready?</summary>
   <div class="faq__content">
-    <p>Our Servers are instantly created upon purchase. If you are having issues, create a ticket on the panel and we will get things running smoothly as fast as possible.</p>
+    <p>Our Servers are instantly created upon purchase. If you are having issues, create a ticket at https://billing.labradorhost.com/client/plugin/support_manager/client_tickets/departments/ (when you've logged in) and we will get things running smoothly as fast as possible.</p>
   </div>
 </details>
 <details>
   <summary>How do I get support for my server?</summary>
   <div class="faq__content">
-    <p>Simply submit a ticket on the panel and we will get back to you as soon as possible.</p>
+    <p>Simply submit a ticket at https://billing.labradorhost.com/client/plugin/support_manager/client_tickets/departments/ (after you've logged in) and we will get back to you as soon as possible.</p>
   </div>
 </details>
 <details>
@@ -135,7 +135,7 @@
 <details>
   <summary>Can I transfer my existing server files/worlds/maps or a single player world to Labradorhost?</summary>
   <div class="faq__content">
-    <p>Yes! We provide full server file access through the panel and with SFTP. If you don't know how to transfer the world files, please submit a ticket on the panel and we will do it for you.</p>
+    <p>Yes! We provide full server file access through the panel and with SFTP. If you don't know how to transfer the world files, please submit a ticket at https://billing.labradorhost.com/client/plugin/support_manager/client_tickets/departments/ (when logged in) and we will do it for you.</p>
   </div>
 </details>
 <details>
@@ -219,7 +219,7 @@
 <details>
   <summary>What is your refund policy?</summary>
   <div class="faq__content">
-    <p>We offer a 72 hour money back guarantee. If you're not happy with your purchase or simply changed your mind, just submit a ticket on the panel - all we ask if that you let us know why so we can improve our service for the future.</p>
+    <p>We offer a 72 hour money back guarantee. If you're not happy with your purchase or simply changed your mind, just create a ticket at https://billing.labradorhost.com/client/plugin/support_manager/client_tickets/departments/ - all we ask if that you let us know why so we can improve our service for the future.</p>
   </div>
 </details>
 <details>
@@ -255,7 +255,7 @@
 <details>
   <summary>Can I change my server hosting plan or package?</summary>
   <div class="faq__content">
-    <p>Yes. Please submit a ticket on the panel and let us know which package you would like to change to. We will be able to complete the change within a few hours without changing your servers address.
+    <p>Yes. Please submit a ticket at https://billing.labradorhost.com/client/plugin/support_manager/client_tickets/departments/ and let us know which package you would like to change to. We will be able to complete the change within a few hours without changing your servers address.
 
 </p>
   </div>
@@ -281,7 +281,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZH2Jktt0mGQAeN17tduO3dzvLGu1qrFgBrYyXGwQ/0H7CWr7rgGi+J4cEsaHpI4Zi31goIvrWAu7LlfdDe/dEGlchoSDzp6w6n5yZloygEyYQcuqKmdVpBKB8nyCm00g">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ypfSkhzqV/Tb4jG273LBzxjvSN1jMVRwiFDvv22XNDLMncH1acPJY7EG7h6O5GS85Y5TeIkKtHbybjgfmVnrDjvKWCcIdYsG2zy+/qT4AVcCzR+bFxfnmzSsvRD02zH8">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for your question. We will get back to you as soon as possible.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
