--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-5">Affordable hosting made simple.</h1>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-7">
-                    What would you like us to host?</h3>
-                
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-7">European Game and Voice Servers</h3>
+                <p class="mbr-text pb-3 mbr-fonts-style display-7"><strong>What would you like us to host?</strong></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="gameserver.html">Game Server</a> 
                     <a class="btn btn-md btn-success display-4" href="voice.html">Voice Server</a></div>
             </div>
