Update to trial button location

--- a/terraria.html
+++ b/terraria.html
@@ -86,7 +86,8 @@
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-black-outline display-7" href="terraria.html#contacts3-1h"><span class="mbri-features mbr-iconfont mbr-iconfont-btn"></span>
                         Features</a> <a class="btn btn-md btn-black display-7" href="terraria.html#header16-58"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>See Plans</a> <a class="btn btn-md btn-black-outline display-7" href="terraria.html#content10-1m"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
                         Hardware</a> <a class="btn btn-md btn-white-outline display-7" href="support.html"><span class="mobi-mbri mobi-mbri-question mbr-iconfont mbr-iconfont-btn"></span>
-                        Ask a question</a></div>
+                        Ask a question</a> <a class="btn btn-md btn-black display-7" href="https://billing.labradorhost.com/order/config/index/terrariahosting/?group_id=3&pricing_id=124" target="_blank"><span class="mobi-mbri mobi-mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>
+                        Free 24H Trial</a></div>
             </div>
         </div>
     </div>
