Added Valheim Server Hosting

--- a/terraria.html
+++ b/terraria.html
@@ -52,9 +52,9 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-7" href="https://panel.labradorhost.com" target="_blank" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbrib-menu mbr-iconfont mbr-iconfont-btn"></span>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-7" href="https://panel.labradorhost.com" target="_blank" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbrib-menu mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Hosting Services</a><div class="dropdown-menu"><a class="dropdown-item text-white display-7" href="minecraft.html">Minecraft</a><a class="dropdown-item text-white text-primary display-7" href="rust.html">Rust</a><a class="dropdown-item text-white display-7" href="terraria.html">Terraria</a><a class="dropdown-item text-white text-primary display-7" href="hytale.html">Hytale</a><a class="dropdown-item text-white text-primary display-7" href="cryofall.html">Cryofall</a><a class="dropdown-item text-white text-primary display-7" href="quakelive.html">Quake Live</a><a class="dropdown-item text-white text-primary display-7" href="xonotic.html">Xonotic</a><a class="dropdown-item text-white text-primary display-7" href="teeworlds.html">Teeworlds</a><a class="dropdown-item text-white text-primary display-7" href="vintagestory.html">Vintage Story</a><a class="dropdown-item text-white display-7" href="teamspeak.html">Teamspeak</a><a class="dropdown-item text-white display-7" href="mumble.html">Mumble</a></div></li><li class="nav-item">
+                        Hosting Services</a><div class="dropdown-menu"><a class="dropdown-item text-white display-7" href="minecraft.html">Minecraft</a><a class="dropdown-item text-white text-primary display-7" href="rust.html">Rust</a><a class="dropdown-item text-white text-primary display-7" href="valheim.html">Valheim</a><a class="dropdown-item text-white display-7" href="terraria.html">Terraria</a><a class="dropdown-item text-white text-primary display-7" href="hytale.html">Hytale</a><a class="dropdown-item text-white text-primary display-7" href="cryofall.html">Cryofall</a><a class="dropdown-item text-white text-primary display-7" href="quakelive.html">Quake Live</a><a class="dropdown-item text-white text-primary display-7" href="xonotic.html">Xonotic</a><a class="dropdown-item text-white text-primary display-7" href="teeworlds.html">Teeworlds</a><a class="dropdown-item text-white text-primary display-7" href="vintagestory.html">Vintage Story</a><a class="dropdown-item text-white display-7" href="teamspeak.html">Teamspeak</a><a class="dropdown-item text-white display-7" href="mumble.html">Mumble</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-7" href="https://panel.labradorhost.com" target="_blank"><span class="mbri-database mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Panel</a>
@@ -116,7 +116,7 @@
                             <div class="b-info b-adress">
                                 <h6 class="align-left mbr-fonts-style display-5">
                                     Easy to manage Control Panel</h6>
-                                <p class="mbr-text align-left mbr-fonts-style display-7">Latest version of Pterodactyl Panel for all your customizing needs.</p>
+                                <p class="mbr-text align-left mbr-fonts-style display-7">Latest version of Pterodactyl Panel for all your customizing needs. See <a href="paneldemo.html" class="text-primary" target="_blank">here </a>for a quick showcase.</p>
                             </div>
                         </div>
                     </div>
