--- a/valheim.html
+++ b/valheim.html
@@ -88,12 +88,64 @@
                 
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="https://billing.labradorhost.com/order/main/packages/valheimserver/?group_id=13" target="_blank"><span class="mobi-mbri mobi-mbri-menu mbr-iconfont mbr-iconfont-btn"></span>
                         Order Server</a> <a class="btn btn-md btn-black display-4" href="page17.html#contacts3-5k"><span class="mobi-mbri mobi-mbri-setting mbr-iconfont mbr-iconfont-btn"></span>
-                        Features</a> <a class="btn btn-md btn-success display-4" href="https://billing.labradorhost.com/order/main/packages/valheimserver/?group_id=13" target="_blank"><span class="mobi-mbri mobi-mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>
-                        24H Free Trial</a> <a class="btn btn-md btn-white-outline display-4" href="support.html" target="_blank"><span class="mbri-question mbr-iconfont mbr-iconfont-btn"></span>
+                        Features</a> <a class="btn btn-md btn-success display-4" href="javascript:OpenModal('ValheimTrialPopup')"><span class="mobi-mbri mobi-mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>Free Trial</a> <a class="btn btn-md btn-white-outline display-4" href="support.html" target="_blank"><span class="mbri-question mbr-iconfont mbr-iconfont-btn"></span>
                         Ask a Question</a></div>
             </div>
         </div>
     </div>
+
+</section>
+
+<section class="mbr-section" id="witsec-modal-window-block-6q" data-rv-view="1071">
+
+	<style>
+	/* Let's not animate the contents of modal windows */
+	.no-anim {
+		-webkit-animation: none !important;
+		-moz-animation: none !important;
+		-o-animation: none !important;
+		-ms-animation: none !important;
+		animation: none !important;
+	}
+	</style>
+
+	
+	
+	<div><div class="modal fade" id="ValheimTrialPopup" tabindex="-1" role="dialog" aria-labelledby="ValheimTrialPopupLabel" aria-hidden="true">  <div class="modal-dialog modal-lg modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="ValheimTrialPopupLabel">Valheim Trial</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="ValheimTrialPopup_body">Do you want to request a trial valid for 3 hours? You will get a temporary username and password for our server panel, where you can access your trial server.</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div><div class="mbr-section-btn"><a href="http://trial.labradorhost.com:5000/" class="no-anim btn btn-primary display-4" target="_new">Get trial</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#ValheimTrialPopup").on("hidden.bs.modal", function () {    var html = $( "#ValheimTrialPopup_body" ).html();    $( "#ValheimTrialPopup_body" ).empty();    $( "#ValheimTrialPopup_body" ).append(html);  })});</script></div>
+
+	<script>
+	if (typeof OpenModal === 'undefined') {
+		OpenModal = function(modalName) {
+			if ($('#' + modalName).length)
+				$('#' + modalName).modal('show');
+			else
+				alert("Sorry, but there is no modal for " + modalName);
+		}
+	}
+
+	function modalSetCookie(cname, cvalue, exdays) {
+		var d = new Date();
+		d.setTime(d.getTime() + (exdays*24*60*60*1000));
+		var expires = "expires="+ d.toUTCString();
+		document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+	}
+
+	function modalGetCookie(cname) {
+		var name = cname + "=";
+		var decodedCookie = decodeURIComponent(document.cookie);
+		var ca = decodedCookie.split(';');
+		for(var i = 0; i <ca.length; i++) {
+			var c = ca[i];
+			while (c.charAt(0) == ' ') {
+				c = c.substring(1);
+			}
+			if (c.indexOf(name) == 0) {
+				return c.substring(name.length, c.length);
+			}
+		}
+		return "";
+	}
+	</script>
 
 </section>
 
