Hardware button link fixes

--- a/mumble.html
+++ b/mumble.html
@@ -86,7 +86,7 @@
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><span style="font-weight: normal;">Dedicated </span>Mumble <span style="font-weight: normal;">Server</span></h1>
                 
                 
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-black display-5" href="https://billing.labradorhost.com/order/main/packages/mumbleserver"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>See Plans</a> <a class="btn btn-md btn-black-outline display-5" href="mumble.html#content10-23"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-black display-5" href="https://billing.labradorhost.com/order/main/packages/mumbleserver"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>See Plans</a> <a class="btn btn-md btn-black-outline display-5" href="mumble.html#counters1-6b"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
                         Hardware</a> <a class="btn btn-md btn-white-outline display-5" href="support.html"><span class="mobi-mbri mobi-mbri-question mbr-iconfont mbr-iconfont-btn"></span>
                         Ask a question</a></div>
             </div>
