--- a/teamspeak.html
+++ b/teamspeak.html
@@ -86,7 +86,7 @@
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">Dedicated TS Server</h1>
                 
                 
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-black display-5" href="teamspeak.html#pricing-tables1-1s"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>See Plans</a> <a class="btn btn-md btn-black-outline display-5" href="teamspeak.html#content10-1v"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-black display-5" href="teamspeak.html#pricing-tables1-1s"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>See Plans</a> <a class="btn btn-md btn-black-outline display-5" href="teamspeak.html#counters1-69"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
                         Hardware</a></div>
             </div>
         </div>
