--- a/vintagestory.html
+++ b/vintagestory.html
@@ -89,7 +89,7 @@
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
                     No Premium or Budget tier nonsense. We provide the same great hardware, features and services for all plans.</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-black-outline display-5" href="vintagestory.html#contacts3-4o"><span class="mbri-features mbr-iconfont mbr-iconfont-btn"></span>
-                        Features</a> <a class="btn btn-md btn-black display-5" href="vintagestory.html#pricing-tables2-4r"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>See Plans</a> <a class="btn btn-md btn-black-outline display-5" href="vintagestory.html#content10-4u"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
+                        Features</a> <a class="btn btn-md btn-black display-5" href="vintagestory.html#pricing-tables2-4r"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>See Plans</a> <a class="btn btn-md btn-black-outline display-5" href="vintagestory.html#counters1-67"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
                         Hardware</a></div>
             </div>
         </div>
