--- a/minecraft.html
+++ b/minecraft.html
@@ -90,7 +90,7 @@
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
                     No Premium or Budget tier nonsense. We provide the same great hardware, features and services for all plans.</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-black-outline display-7" href="page1.html#contacts3-y"><span class="mbri-features mbr-iconfont mbr-iconfont-btn"></span>
-                        Features</a> <a class="btn btn-md btn-black display-7" href="https://billing.labradorhost.com/order/main/packages/minecrafthosting"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>See Plans</a>  <a class="btn btn-md btn-black-outline display-7" href="page1.html#content10-17"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
+                        Features</a> <a class="btn btn-md btn-black display-7" href="https://billing.labradorhost.com/order/main/packages/minecrafthosting"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>See Plans</a>  <a class="btn btn-md btn-black-outline display-7" href="minecraft.html#counters1-5s"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
                         Hardware</a> <a class="btn btn-md btn-white-outline display-7" href="support.html" target="_blank"><span class="mobi-mbri mobi-mbri-question mbr-iconfont mbr-iconfont-btn"></span>
                         Ask a question</a> <a class="btn btn-md btn-black display-7" href="https://billing.labradorhost.com/order/main/packages/minecrafthosting" target="_blank"><span class="mobi-mbri mobi-mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>
                         24H Free Trial</a></div>
