--- a/rust.html
+++ b/rust.html
@@ -89,7 +89,7 @@
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
                     No Premium or Budget tier nonsense. We provide the same great hardware, features and services for all plans.</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-success-outline display-7" href="rust.html#contacts3-4y"><span class="mbri-features mbr-iconfont mbr-iconfont-btn"></span>
-                        Features</a> <a class="btn btn-md btn-primary display-7" href="rust.html#pricing-tables2-57"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>See Plans</a> <a class="btn btn-md btn-success-outline display-7" href="rust.html#content10-54"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
+                        Features</a> <a class="btn btn-md btn-primary display-7" href="rust.html#pricing-tables2-57"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>See Plans</a> <a class="btn btn-md btn-success-outline display-7" href="rust.html#counters1-5u"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
                         Hardware</a> <a class="btn btn-md btn-white-outline display-7" href="support.html"><span class="mobi-mbri mobi-mbri-question mbr-iconfont mbr-iconfont-btn"></span>Ask a question</a></div>
             </div>
         </div>
