--- a/valheimtriallocation.html
+++ b/valheimtriallocation.html
@@ -77,9 +77,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-fonts-style display-5">
-                    Mobirise is one of the easiest website development tools available today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
-                </div>
+            <div class="section-text align-center mbr-fonts-style display-5"></div>
             <hr class="line" style="width: 25%;">
         </div>
         </div>
