Terraria Trial page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/labradorhost-logo-white-pixteller-7.png" type="image/x-icon">
-  <meta name="description" content="Host your Game and Voice servers easily at Labradorhost">
+  <meta name="description" content="Host your Game and Voice servers easily and affordably at Labradorhost.">
   
   
-  <title>Labradorhost - Game and Voice Server Hosting</title>
+  <title>Labradorhost | Quality Game and Voice Server Hosting at Incredible Prices</title>
   <link rel="stylesheet" href="assets/font-awesome-solid/../css/fontawesome.min.css">
   <link rel="stylesheet" href="assets/font-awesome-solid/css/solid.min.css">
   <link rel="stylesheet" href="assets/font-awesome-brands/../css/fontawesome.min.css">
