--- a/valheim.html
+++ b/valheim.html
@@ -7,10 +7,10 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/labradorhost-logo-white-pixteller-7.png" type="image/x-icon">
-  <meta name="description" content="Valheim Server Hosting at an unbeatable price. Host your Valheim server at Labradorhost">
+  <meta name="description" content="Valheim Server Hosting at an unbeatable price. Launch your Valheim Dedicated Server today!">
   
   
-  <title>Valheim Server Hosting at Labradorhost</title>
+  <title>Valheim Server Hosting at $5.99/month | Labradorhost</title>
   <link rel="stylesheet" href="assets/font-awesome-solid/../css/fontawesome.min.css">
   <link rel="stylesheet" href="assets/font-awesome-solid/css/solid.min.css">
   <link rel="stylesheet" href="assets/font-awesome-brands/../css/fontawesome.min.css">
