--- a/minecraft.html
+++ b/minecraft.html
@@ -100,7 +100,7 @@
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-97" data-rv-view="261">
+<section class="mbr-section" id="witsec-modal-window-block-bi" data-rv-view="7914">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -115,7 +115,7 @@
 
 	
 	
-	<div><div class="modal fade" id="MinecraftTrialPopup" tabindex="-1" role="dialog" aria-labelledby="MinecraftTrialPopupLabel" aria-hidden="true">  <div class="modal-dialog modal-lg " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="MinecraftTrialPopupLabel">Do you want to launch a trial of our Minecraft Server Hosting?</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="MinecraftTrialPopup_body">You will get a trial account to our server panel, where you can play on your server and get a feel of our server panel. Your trial account will be valid for three hours.</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div><div class="mbr-section-btn"><a href="https://labradorhost.com/minecrafttriallocation" class="no-anim btn btn-primary display-4" target="_new">Launch Trial</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#MinecraftTrialPopup").on("hidden.bs.modal", function () {    var html = $( "#MinecraftTrialPopup_body" ).html();    $( "#MinecraftTrialPopup_body" ).empty();    $( "#MinecraftTrialPopup_body" ).append(html);  })});</script></div>
+	<div><div class="modal fade" id="MinecraftTrialPopup" tabindex="-1" role="dialog" aria-labelledby="MinecraftTrialPopupLabel" aria-hidden="true">  <div class="modal-dialog modal-lg modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="MinecraftTrialPopupLabel">Do you want to request a free trial valid for three hours?</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="MinecraftTrialPopup_body">You will be able to try our hosting service and all it's features until the three-hour period expires.</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div><div class="mbr-section-btn"><a href="http://trial.labradorhost.com:5000" class="no-anim btn btn-primary display-4" target="_new">Take Me to The Trial Page!</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#MinecraftTrialPopup").on("hidden.bs.modal", function () {    var html = $( "#MinecraftTrialPopup_body" ).html();    $( "#MinecraftTrialPopup_body" ).empty();    $( "#MinecraftTrialPopup_body" ).append(html);  })});</script></div>
 
 	<script>
 	if (typeof OpenModal === 'undefined') {
