--- a/valheim.html
+++ b/valheim.html
@@ -90,7 +90,7 @@
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="https://billing.labradorhost.com/order/main/packages/valheimserver" target="_blank"><span class="fas fa-fw fa-gamepad mbr-iconfont mbr-iconfont-btn"></span>
                         Launch Server</a> <a class="btn btn-md btn-black display-4" href="page17.html#contacts3-5k"><span class="mobi-mbri mobi-mbri-setting mbr-iconfont mbr-iconfont-btn"></span>
                         Features</a> <a class="btn btn-md btn-success display-4" href="javascript:OpenModal('ValheimTrialPopup')"><span class="mobi-mbri mobi-mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>Free Trial</a> <a class="btn btn-md btn-white-outline display-4" href="support.html" target="_blank"><span class="mbri-question mbr-iconfont mbr-iconfont-btn"></span>
-                        Questions</a></div>
+                        Ask a Question</a></div>
             </div>
         </div>
     </div>
