--- a/rust.html
+++ b/rust.html
@@ -91,10 +91,64 @@
                     No Premium or Budget tier nonsense. We provide the same great hardware, features and services for all plans.</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-success-outline display-7" href="rust.html#contacts3-4y"><span class="mbri-features mbr-iconfont mbr-iconfont-btn"></span>
                         Features</a> <a class="btn btn-md btn-primary display-7" href="https://billing.labradorhost.com/order/main/packages/rustserver"><span class="mobi-mbri mobi-mbri-play mbr-iconfont mbr-iconfont-btn"></span>Launch Server</a> <a class="btn btn-md btn-success-outline display-7" href="rust.html#counters1-5u"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>
-                        Hardware</a> <a class="btn btn-md btn-white-outline display-7" href="support.html"><span class="mobi-mbri mobi-mbri-question mbr-iconfont mbr-iconfont-btn"></span>Ask a question</a></div>
+                        Hardware</a> <a class="btn btn-md btn-white-outline display-7" href="javascript:OpenModal('RustTrialPopup')"><span class="mobi-mbri mobi-mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>
+                        Free Trial</a> <a class="btn btn-md btn-white-outline display-7" href="support.html"><span class="mobi-mbri mobi-mbri-question mbr-iconfont mbr-iconfont-btn"></span>Ask a question</a></div>
             </div>
         </div>
     </div>
+
+</section>
+
+<section class="mbr-section" id="witsec-modal-window-block-bj" data-rv-view="7942">
+
+	<style>
+	/* Let's not animate the contents of modal windows */
+	.no-anim {
+		-webkit-animation: none !important;
+		-moz-animation: none !important;
+		-o-animation: none !important;
+		-ms-animation: none !important;
+		animation: none !important;
+	}
+	</style>
+
+	
+	
+	<div><div class="modal fade" id="RustTrialPopup" tabindex="-1" role="dialog" aria-labelledby="RustTrialPopupLabel" aria-hidden="true">  <div class="modal-dialog modal-lg modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="RustTrialPopupLabel">Do you want to request a free trial valid for three hours?</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="RustTrialPopup_body">You will be able to try our hosting service and all it's features until the three-hour period expires.</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div><div class="mbr-section-btn"><a href="http://trial.labradorhost.com:5000" class="no-anim btn btn-primary display-4" target="_new">Take Me to The Trial Page!</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#RustTrialPopup").on("hidden.bs.modal", function () {    var html = $( "#RustTrialPopup_body" ).html();    $( "#RustTrialPopup_body" ).empty();    $( "#RustTrialPopup_body" ).append(html);  })});</script></div>
+
+	<script>
+	if (typeof OpenModal === 'undefined') {
+		OpenModal = function(modalName) {
+			if ($('#' + modalName).length)
+				$('#' + modalName).modal('show');
+			else
+				alert("Sorry, but there is no modal for " + modalName);
+		}
+	}
+
+	function modalSetCookie(cname, cvalue, exdays) {
+		var d = new Date();
+		d.setTime(d.getTime() + (exdays*24*60*60*1000));
+		var expires = "expires="+ d.toUTCString();
+		document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+	}
+
+	function modalGetCookie(cname) {
+		var name = cname + "=";
+		var decodedCookie = decodeURIComponent(document.cookie);
+		var ca = decodedCookie.split(';');
+		for(var i = 0; i <ca.length; i++) {
+			var c = ca[i];
+			while (c.charAt(0) == ' ') {
+				c = c.substring(1);
+			}
+			if (c.indexOf(name) == 0) {
+				return c.substring(name.length, c.length);
+			}
+		}
+		return "";
+	}
+	</script>
 
 </section>
 
