Fixed grammar error

--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
     <div class="container align-center">
         <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
             What is Labradorhost?<br></h2>
-        <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-7"><strong>Labradorhost </strong>is a fairly new Game and Voice hosting service run by gaming enthusiasts who have been actively playing games throughout the 2000s. The creators of this service are freelancers. This allows for scalability in what we can offer to our customers, which we think is vital to running a hosting service with many users. We always look forward to hearing from our customers and to fullfill potential requests.
+        <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-7"><strong>Labradorhost </strong>is a fairly new Game and Voice hosting service run by gaming enthusiasts who have been actively playing games throughout the 2000s. The creators of this service are freelancers. This allows for scalability in what we can offer to our customers, which we think is vital to running a hosting service with many users. We always look forward to hearing from our customers and to fullfill potential requests.<br><br>
 <div>
 </div><div>You may be asking to yourself – why should I go with such a new hosting service? Well, our prices are hard to beat, and our support is always friendly.
- We&nbsp;<span style="font-size: 1rem;">suggest giving us a chance and can assure you that you won't be disappointed. In addition, the 72-hour refund policy applies to all services in case you, for any reason, isn't satisfied. We take customer satisfaction <strong>extremely </strong>seriously.</span></div><div><span style="font-size: 1rem;"></span><br></div><div>If you have any further questions regarding us, please feel free to&nbsp;<a href="support.html" class="text-primary">ask</a>.</div></h3>
+ We&nbsp;<span style="font-size: 1rem;">suggest giving us a chance and can assure you that you won't be disappointed. In addition, the 72-hour refund policy applies to all services in case you, for any reason, aren't satisfied. We take customer satisfaction <strong>extremely </strong>seriously.</span></div><div><span style="font-size: 1rem;"></span><br></div><div>If you have any further questions regarding us, please feel free to&nbsp;<a href="support.html" class="text-primary">ask</a>.</div></h3>
         <div class="row media-row">
             
         <div class="team-item col-lg-3 col-md-6">
