--- a/rust.html
+++ b/rust.html
@@ -114,7 +114,7 @@
 
 	
 	
-	<div><div class="modal fade" id="RustTrialPopup" tabindex="-1" role="dialog" aria-labelledby="RustTrialPopupLabel" aria-hidden="true">  <div class="modal-dialog modal-lg modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="RustTrialPopupLabel">Do you want to request a free trial valid for three hours?</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="RustTrialPopup_body">You will be able to try our hosting service and all it's features until the three-hour period expires.</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div><div class="mbr-section-btn"><a href="http://trial.labradorhost.com:5000" class="no-anim btn btn-primary display-4" target="_new">Take Me to The Trial Page!</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#RustTrialPopup").on("hidden.bs.modal", function () {    var html = $( "#RustTrialPopup_body" ).html();    $( "#RustTrialPopup_body" ).empty();    $( "#RustTrialPopup_body" ).append(html);  })});</script></div>
+	<div><div class="modal fade" id="RustTrialPopup" tabindex="-1" role="dialog" aria-labelledby="RustTrialPopupLabel" aria-hidden="true">  <div class="modal-dialog modal-lg modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="RustTrialPopupLabel">Do you want to request a free trial valid for three hours?</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="RustTrialPopup_body">You will be able to try our hosting service and all it's features until the three-hour period expires.</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div><div class="mbr-section-btn"><a href="https://trial.labradorhost.com" class="no-anim btn btn-primary display-4" target="_new">Take Me to The Trial Page!</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#RustTrialPopup").on("hidden.bs.modal", function () {    var html = $( "#RustTrialPopup_body" ).html();    $( "#RustTrialPopup_body" ).empty();    $( "#RustTrialPopup_body" ).append(html);  })});</script></div>
 
 	<script>
 	if (typeof OpenModal === 'undefined') {
@@ -252,7 +252,7 @@
                         <div class="wrapper">
                             
                             <div class="b-info b-mail">
-                                <h6 class="align-left mbr-fonts-style display-5">Oxide/uMod Support</h6>
+                                <h6 class="align-left mbr-fonts-style display-5">Oxide Support</h6>
                                 <p class="mbr-text align-left mbr-fonts-style display-7">Enable Oxide with one click.</p>
                             </div>
                         </div>
