Updated Terms of Service

--- a/serverspecifications.html
+++ b/serverspecifications.html
@@ -121,7 +121,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text py-5 mbr-fonts-style display-7">
-                                    Our servers use&nbsp;Intel® Core™ i9-9900K Octa-Core processors or equivalent to make sure our clients have no lag-related issues running their game and voice servers.<br><br>The&nbsp;Intel® Core™ i9-9900K has a base frequency of 3.6 GHz and can boost up to a whopping 5.0 GHz if needed. This means that our servers can handle resource intensive tasks such as a server with a lot of players on at the same time.<br><br><br></p>
+                                    Our servers use different processors depending on what meets the requirements for the specific service. The range of processors include Intel Xeon E5s and equivalent.<br><br><br></p>
                             </div>
                         </div>
                     </div>
