--- a/arksurvivalevolved.html
+++ b/arksurvivalevolved.html
@@ -98,7 +98,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-bh" data-rv-view="1449">
+<section class="mbr-section" id="witsec-modal-window-block-bh" data-rv-view="147">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -430,7 +430,7 @@
                             <span class="mbr-iconfont mobi-mbri-to-local-drive mobi-mbri" style="color: rgb(249, 242, 149); fill: rgb(249, 242, 149);"></span>
                         </div>
                         <div class="card-text">
-                            <h3 class="count pt-3 pb-3 mbr-fonts-style display-5">i9 9900k CPUs</h3>
+                            <h3 class="count pt-3 pb-3 mbr-fonts-style display-5">Professional Grade Processors</h3>
                             
                             
                         </div>
