--- a/valheim.html
+++ b/valheim.html
@@ -117,7 +117,7 @@
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6q" data-rv-view="357">
+<section class="mbr-section" id="witsec-modal-window-block-6q" data-rv-view="3387">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -132,7 +132,7 @@
 
 	
 	
-	<div><div class="modal fade" id="ValheimTrialPopup" tabindex="-1" role="dialog" aria-labelledby="ValheimTrialPopupLabel" aria-hidden="true">  <div class="modal-dialog modal-lg modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="ValheimTrialPopupLabel">Do you want to request a free trial valid for three hours?</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="ValheimTrialPopup_body">You will be able to try our hosting service and all it's features until the three-hour period expires.</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div><div class="mbr-section-btn"><a href="https://trial.labradorhost.com" class="no-anim btn btn-primary display-4" target="_new">Take Me to The Trial Page!</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#ValheimTrialPopup").on("hidden.bs.modal", function () {    var html = $( "#ValheimTrialPopup_body" ).html();    $( "#ValheimTrialPopup_body" ).empty();    $( "#ValheimTrialPopup_body" ).append(html);  })});</script></div>
+	<div><div class="modal fade" id="ValheimTrialPopup" tabindex="-1" role="dialog" aria-labelledby="ValheimTrialPopupLabel" aria-hidden="true">  <div class="modal-dialog modal-lg modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="ValheimTrialPopupLabel">Do you want to request a free trial valid for three hours?</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="ValheimTrialPopup_body">You will be able to try our hosting service and all it's features until the three-hour period expires.</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div><div class="mbr-section-btn"><a href="https://game.365hosts.com/trials" class="no-anim btn btn-primary display-4" target="_new">Take Me to The Trial Page!</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#ValheimTrialPopup").on("hidden.bs.modal", function () {    var html = $( "#ValheimTrialPopup_body" ).html();    $( "#ValheimTrialPopup_body" ).empty();    $( "#ValheimTrialPopup_body" ).append(html);  })});</script></div>
 
 	<script>
 	if (typeof OpenModal === 'undefined') {
@@ -439,16 +439,16 @@
                     <h2 class="mbr-section-title pb-5 mbr-fonts-style display-2">Questions &amp; Answers</h2>
                 </div>
                 <div class="clearfix"></div>
-                <div id="bootstrap-accordion_67" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_152" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_67" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_152" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>
                                     Can I use my already existing Valheim world?</h4>
                             </a>
                         </div>
-                        <div id="collapse1_67" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_67">
+                        <div id="collapse1_152" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_152">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
                                    Yes you can! To do so, please follow this <a href="https://billing.labradorhost.com/plugin/support_manager/knowledgebase/view/41/how-can-i-upload-my-existing-old-valheim-world/" class="text-primary" target="_blank">guide </a>after your purchase.</p>
@@ -457,13 +457,13 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
-                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_67" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_152" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> How does this work?</h4>
                             </a>
                             
                         </div>
-                        <div id="collapse2_67" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_67">
+                        <div id="collapse2_152" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_152">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
                                    It's quite simple! After you have made your purchase, you will recieve an email with a username and a password to our <a href="https://panel.labradorhost.com" class="text-primary" target="_blank">server panel</a> (username and password can be changed after first-login). On the panel, you can start, stop and restart your server, as well as modify files and settings, should you wish to. You are welcome to use a <a href="https://trial.labradorhost.com" class="text-primary" target="_blank">free trial </a>to see how it all works.</p>
@@ -472,12 +472,12 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_67" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_152" aria-expanded="false" aria-controls="collapse3">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Can I cancel my server at any time?</h4>
                             </a>
                         </div>
-                        <div id="collapse3_67" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_67">
+                        <div id="collapse3_152" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_152">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">Yes you can. There are never any contracts, obligations or hidden fees with our services. We take customer satisfaction extremely seriously.</p>
                             </div>
@@ -485,12 +485,12 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingFour">
-                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_67" aria-expanded="false" aria-controls="collapse4">
+                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_152" aria-expanded="false" aria-controls="collapse4">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>How long is the setup time for your servers?</h4>
                             </a> 
                         </div>
-                        <div id="collapse4_67" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#bootstrap-accordion_67">
+                        <div id="collapse4_152" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#bootstrap-accordion_152">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">It's very fast! Your Valheim instance will be provisioned and ready to start within 5 minutes after your purchase thanks to our automated setup mechanism.</p>
                             </div>
